[package]
name = "rand_mt"
version = "2.0.0-dev"
authors = ["David Creswick <dcrewi@gyrae.net>", "Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/artichoke/rand_mt"
documentation = "https://artichoke.github.io/rand_mt/rand_mt/"
description = "Reference Mersenne Twister random number generators"
keywords = ["random", "rand", "rng", "mt"]
categories = ["algorithms"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
]

[dependencies]
rand = ">=0.3, <0.5"
