[package]
name = "rand_mt"
version = "2.0.0" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["David Creswick <dcrewi@gyrae.net>", "Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/artichoke/rand_mt"
documentation = "https://docs.rs/rand_mt"
homepage = "https://github.com/artichoke/rand_mt"
description = "Reference Mersenne Twister random number generators."
keywords = ["random", "rand", "rng", "mt"]
categories = ["algorithms", "no-std"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
]

[features]
default = ["std"]
# Enables `std::error::Error` impls.
std = []

[dependencies]
rand_core = "0.5"

[dev-dependencies]
doc-comment = "0.3"
quickcheck = { version = "0.9", default-features = false }
quickcheck_macros = "0.9"
version-sync = "0.8"
