[package]
name = "rand_mt"
version = "4.0.0" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["David Creswick <dcrewi@gyrae.net>", "Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/artichoke/rand_mt"
documentation = "https://docs.rs/rand_mt"
homepage = "https://github.com/artichoke/rand_mt"
description = "Reference Mersenne Twister random number generators."
keywords = ["random", "rand", "rng", "mt"]
categories = ["algorithms", "no-std"]
include = ["src/**/*", "tests/**/*", "LICENSE-*", "README.md"]

[features]
default = ["rand-traits", "std"]
rand-traits = ["rand_core"]
# Enables `std::error::Error` impls.
std = []

[dependencies]
rand_core = { version = "0.6", default-features = false, optional = true }

[dev-dependencies]
getrandom = { version = "0.2", default-features = false }
# Check that crate versions are properly updated in documentation and code when
# bumping the version.
version-sync = "0.9, >= 0.9.2"

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `rand_mt` has the same API and code on all targets.
targets = ["x86_64-unknown-linux-gnu"]
